@@ -149,7 +149,13 @@ sub shouldfail {
 	table: $vart = 52;
 };
 
-my ($sql, $v) = DBIx::Perlish::gen_sql(\&s3, "select");
+my $type = "hello"; $type = "";
+sub parsetime_if {
+	my $t : product;
+	$t->name eq $type if $type;
+};
+
+my ($sql, $v) = DBIx::Perlish::gen_sql(\&parsetime_if, "select");
 print "$sql\n";
 print "values: ", join ", ", @$v;
 print "\n";
